добавление jpeg и png контента

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>GllacyShop</title>
+</head>
+<body>
 	<!-- Шапка-->
 	<header class="main-header">
 		<img class="main-header-logo" src="http://placehold.it/150x100" width="155" height="70" alt="Логотип Gllacy"> <!-- ???Не отображается подпись в лого-->
@@ -37,13 +38,13 @@
 		</section>
 		<section class="container-banners">
 			<div class="container-banners-jam">
-				<img src="http://placehold.it/150x100" width="560" height="230" alt="Малинки даром!">
+				<img src="img/index/banner-left.jpg" width="560" height="228" alt="Малинки даром!">
 				<h3>Малинки даром!</h3>
 				<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
 				<a href="basket.html">Хочу варенье!</a>
 			</div>
 			<div class="container-banners-chocolate"></div>
-				<img src="http://placehold.it/150x100" width="560" height="230" alt="Шоколадки даром!">
+				<img src="img/index/banner-right.jpg" width="560" height="228" alt="Шоколадки даром!">
 				<h3>Шоколадки даром!</h3>
 				<pПри покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
 				<a href="basket.html">Хочу шоколадки!</a>
@@ -51,24 +52,24 @@
 		</section>
 		<section class="hits">
 			<ul compact="hits-list">
-				<li class="hits-list-item">
-					<a class="product" href="catalog-item.html"><img src="img/product-1.jpg" width="265" height="265" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
-					<p class="conteiner-item-price">310P/<span>кг</span></p>
+				<li class="hits-list-products">
+					<a class="product" href="catalog-item.html"><img src="img/index/hit-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
+					<p class="conteiner-price">310P/<span>кг</span></p>
 					<h3><a href="catalog-item.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
 				</li>
-				<li class="hits-list-item">
-					<a class="product" href="catalog-item.html"><img src="img/product-2.jpg" width="265" height="265" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
-					<p class="conteiner-item-price">380P/<span>кг</span></p>
+				<li class="hits-list-products">
+					<a class="product" href="catalog-item.html"><img src="img/index/hit-2.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
+					<p class="conteiner-price">380P/<span>кг</span></p>
 					<h3><a href="catalog-item.html">Сливочно-кофейное с кусочками шоколада</a></h3>
 				</li>
-				<li class="hits-list-item">
-					<a class="product" href="catalog-item.html"><img src="img/product-3.jpg" width="265" height="265" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
-					<p class="conteiner-item-price">355P/<span>кг</span></p>
+				<li class="hits-list-products">
+					<a class="product" href="catalog-item.html"><img src="img/index/hit-3.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
+					<p class="conteiner-price">355P/<span>кг</span></p>
 					<h3><a href="catalog-item.html">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
 				</li>
-				<li class="hits-list-item">
-					<a class="product" href="catalog-item.html"><img src="img/product-4.jpg" width="265" height="265" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
-					<p class="conteiner-item-price">415P/<span>кг</span></p>
+				<li class="hits-list-products">
+					<a class="product" href="catalog-item.html"><img src="img/index/hit-4.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
+					<p class="conteiner-price">415P/<span>кг</span></p>
 					<h3><a href="catalog-item.html">Сливочное крем-брюле с карамельной подливкой</a></h3>
 				</li>
 			</ul>	
@@ -78,12 +79,12 @@
 			<div class="conteiner-seo-left"></div>
 				<h3 class="visually-hidden">Технологии</h3> <!-- скрытый заголовок -->
 				<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-				<h3>Технологии</h3>Сырье</h3> <!-- скрытый заголовок -->
+				<h3>Сырье</h3> <!-- скрытый заголовок -->
 				<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
 			<div class="conteiner-seo-right"></div>
-				<h3>Технологии</h3>Поставщики</h3> <!-- скрытый заголовок -->
+				<h3>Поставщики</h3> <!-- скрытый заголовок -->
 				<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-				<h3>Технологии</h3>Достака</h3> <!-- скрытый заголовок -->
+				<h3>Доставка</h3> <!-- скрытый заголовок -->
 				<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 		</section>
 		<section class="other">
@@ -137,5 +138,5 @@
 				</section>
 		</footer>
 	</main>
-  </body>
+</body>
 </html>
